# axu

./: .gitignore  Cargo.toml  PKGBUILD  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
src/: cli.rs  main.rs  main.ts  packages.rs  results.rs  updates.rs  utils.rs  utils.ts  versions.rs
src/utils/: completions.rs  fmt.rs  lines.rs  mod.rs  parsing.rs
