[package]
name = "axu"
version = "1.5.5"
authors = ["Taufik Hidayat <tfkhdyt@proton.me>"]
description = "A cli tool to check your Arch Linux explicitly installed packages updates"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.3"
colored = "2.0.4"
duct = "0.13.6"
indicatif = "0.17.7"
rayon = "1.8.0"
